# antikoerper

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: example.nix  example.toml  minimal.toml  nixos-configuration.nix
src/: app.rs  conf.rs  item.rs  main.rs  output.rs
src/output/: error.rs  file.rs  influx.rs  mod.rs
