[package]
authors = [
  "Marcel Müller <neikos@neikos.email>",
  "Mario Krehl <mario-krehl@gmx.de>"
]
name = "antikoerper"
version = "0.3.0"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/anti-koerper/antikoerper"
keywords = ["monitoring", "lightweight", "fast"]
description = "A lightweight and simple to use local monitoring application"

[dependencies]
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_regex  = "1"
toml         = "0.7"
itertools    = "0.10"
regex        = "1"
influxdb     = "0.6"

